--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
         <script src="scripts/courses.js" defer></script>
         <script src="scripts/navigation.js" defer></script>
         <script src="scripts/date.js" defer></script>
+
+        <link rel="icon" href="images/favicon.ico">
     </head>
     <body>
         <header>
