puebla_trade_federation_home

--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial=scale=1.0">
-        <title>Puebla Trade Federation</title>
-        <meta name="description" content="WDD 231 - Web Frontend Development 1 - Jose Luis Izelo Mabarak, this is the first activitie of WDD 231, Course Home Page.">
+        <title>Puebla Trade Federation Directiory</title>
+        <meta name="description" content="WDD 231 - Web Frontend Development 1 - Jose Luis Izelo Mabarak, this is the second activitie of WDD 231 and the directory of the chamber, Puebla Trade Federation Directiory.">
         <meta name="author" content="Jose Luis Izelo Mabarak">      
         <!--Tektur-->
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -20,8 +20,8 @@
 
         <link rel="icon" href="favicon.ico">
 
-        <meta property="og:title" content="Course Home Page">
-        <meta property="og:description" content="WDD 231 - Web Frontend Development 1 - Jose Luis Izelo Mabarak, this is the first activitie of WDD 231, Course Home Page."> 
+        <meta property="og:title" content="Puebla Trade Federation Directiory">
+        <meta property="og:description" content="WDD 231 - Web Frontend Development 1 - Jose Luis Izelo Mabarak, this is the second activitie of WDD 231 and the directory of the chamber, Puebla Trade Federation Directiory."> 
         <meta property="og:image" content="https://izelomabarak.github.io/wdd231/images/logo.svg" />
         <meta property="og:url" content="https://izelomabarak.github.io/wdd231/">
     </head>
