--- a/chamber/index.html
+++ b/chamber/index.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial=scale=1.0">
-        <title>Course Home Page</title>
-        <meta name="description" content="WDD 231 - Web Frontend Development 1 - Jose Luis Izelo Mabarak, this is the first activitie of WDD 231, Course Home Page.">
+        <title>Puebla Trade Federation Home</title>
+        <meta name="description" content="WDD 231 - Web Frontend Development 1 - Jose Luis Izelo Mabarak, this is the third activitie of WDD 231 and the home of the chamber, Puebla Trade Federation Home.">
         <meta name="author" content="Jose Luis Izelo Mabarak">      
         <!--Tektur-->
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -13,58 +13,82 @@
 
         <link rel="stylesheet" href="styles/base.css">
         <link rel="stylesheet" href="styles/larger.css">
-        <script src="scripts/courses.js" defer></script>
+        <link rel="stylesheet" href="styles/medium.css">
         <script src="scripts/navigation.js" defer></script>
         <script src="scripts/date.js" defer></script>
+        <script src="scripts/spotlight.js" defer></script>
 
-        <link rel="icon" href="images/favicon.ico">
+        <link rel="icon" href="favicon.ico">
 
-        <meta property="og:title" content="Course Home Page">
-        <meta property="og:description" content="WDD 231 - Web Frontend Development 1 - Jose Luis Izelo Mabarak, this is the first activitie of WDD 231, Course Home Page."> 
+        <meta property="og:title" content="Puebla Trade Federation Home">
+        <meta property="og:description" content="WDD 231 - Web Frontend Development 1 - Jose Luis Izelo Mabarak, this is the third activitie of WDD 231 and the home of the chamber, Puebla Trade Federation Home."> 
         <meta property="og:image" content="https://izelomabarak.github.io/wdd231/images/logo.svg" />
         <meta property="og:url" content="https://izelomabarak.github.io/wdd231/">
     </head>
     <body>
         <header>
             <img src="images/logo.svg" alt="Site logo" width="512" height="512">
-            <span>Jose Luis Izelo Mabarak</span>
+            <span>Puebla Trade Federation</span>
             <button id="han-btn" class="hamburger"></button>
+            <nav id="nav-bar" class="navigation">
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#" class="current">Directory</a></li>
+                    <li><a href="#">Join</a></li>
+                    <li><a href="#">Discover</a></li>
+                </ul>
+            </nav>
         </header>
-        <nav id="nav-bar" class="navigation">
-            <ul>
-                <li class="current"><a href="#">Home</a></li>
-                <li><a href="#">Chamber Project</a></li>
-                <li><a href="#">Fina Project</a></li>
-            </ul>
-        </nav>
         <main>
+            <div class="hero">
+                <picture class="principal">
+                    <img src="images/hero.jpg" alt="Hello, my name is Luis Izelo">
+                </picture>
+                <a class="link" href="#">Chamber of Commerce</a>
+            </div>
             <h1>Home</h1>
-            <div class="information">
-                <section class="about">
-                    <h2>About Me</h2>
+            <div class="news">
+                <section class="events">
+                    <h2>Events</h2>
                     <p>Hello every one, my name is Jose Luis Izelo Mabarak from Puebla, Mexico, I am In a full time Service Mission in the church, I also like play the piano and build things like legos, I realy whant to learn more about programation. In this BYU Patway program and I am very excited for learn new things.</p>
                 </section>
-                <section class="student">
-                    <h2>Student Photo</h2>
-                    <div>      
-                        <img src="images/profile.jpg" alt="Hello, my name is Luis Izelo">
+                <section class="currentWeather">
+                    <h2>Current Weather</h2>
+                    <div class="currentWeatherDivision">
+                        <img id="graphic" src="" alt="">
+                        <div class="weatherData">
+                            <p id="temperature"></p>
+                            <p id="description"></p>
+                            <p id="temperatureHigh"></p>
+                            <p id="temperatureLow"></p>
+                            <p id="humidity"></p>
+                            <p id="sunrise"></p>
+                            <p id="sunset"></p>
+                        </div>
+                    </div>
+                </section>
+                <section class="weatherForecast">
+                    <h2>Weather Forecast</h2>
+                    <div class="weatherData">
+                        <p id="today"></p>
+                        <p id="tomorrow"></p>
+                        <p id="dayAfterTomorrow"></p>
                     </div>
                 </section>
             </div>
-            <section class="certificate">
-                <h2>Web Certificate Courses</h2>
-                <nav>
-                    <ul class="filters">
-                        <li><a href="#" id="all">All Courses</a></li>
-                        <li><a href="#" id="wdd">WDD Courses</a></li>
-                        <li><a href="#" id="cse">CSE Courses</a></li>
-                    </ul>
-                </nav>
-                <div class="courses"></div> 
-                <span class="points" id="credits"></span>
+            <section>
+                <div id="spotlights"></div>
             </section>
         </main>
+        <script src="scripts/weather.js" defer></script>
+        <script src="scripts/weather_forecast.js" defer></script>
         <footer>
+            <div>
+                <p>Puebla Trade Federation</p>
+                <p>1476 Sandhill Rd Orem, PUE 84058-7310 MEX</p>
+                <p>pueblatradedfed@.org</p>
+                <p>+52 223 567 4890</p>
+            </div>
             <div class="social">
                 <a href="https://github.com/izelomabarak" target="https://github.com/izelomabarak"><img src="images/github.svg" alt="Facebook" width="16" height="16"></a>
                 <a href="https://www.linkedin.com/in/jose-luis-izelo-mabarak-07b009317/" target="https://www.linkedin.com/in/jose-luis-izelo-mabarak-07b009317/"><img src="images/linkedin.svg" alt="Linkedin" width="16" height="16"></a>
@@ -72,6 +96,8 @@
                 <a href="#"><img src="images/whatsapp.svg" alt="Whatsapp" width="16" height="16"></a>
             </div>
             <div class="dates">
+                <p>wdd231 Class Project</p>
+                <p>Jose Luis Izelo Mabarak</p>
                 <p id="year"></p>
                 <p id="modified"></p>
             </div>
