puebla_trade_federation_home

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -32,8 +32,8 @@
             <button id="han-btn" class="hamburger"></button>
             <nav id="nav-bar" class="navigation">
                 <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#" class="current">Directory</a></li>
+                    <li><a href="#" class="current">Home</a></li>
+                    <li><a href="directory.html">Directory</a></li>
                     <li><a href="#">Join</a></li>
                     <li><a href="#">Discover</a></li>
                 </ul>
@@ -50,7 +50,9 @@
             <div class="news">
                 <section class="events">
                     <h2>Events</h2>
-                    <p>Hello every one, my name is Jose Luis Izelo Mabarak from Puebla, Mexico, I am In a full time Service Mission in the church, I also like play the piano and build things like legos, I realy whant to learn more about programation. In this BYU Patway program and I am very excited for learn new things.</p>
+                    <p>10/15/2025 Meeting With Investors: Meet our investors and see how he can help to grow your enterprise</p>
+                    <p>12/15/2025 Christmas Reunion: Have a social activity with our team and some representands of the esterprises for expand your network</p>
+                    <p>1/15/2026 Talk for New Members: Have a epecial talk with our team for understand how work the federation and how improve your enterprise</p>
                 </section>
                 <section class="currentWeather">
                     <h2>Current Weather</h2>
