--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -32,7 +32,7 @@
             <button id="han-btn" class="hamburger"></button>
             <nav id="nav-bar" class="navigation">
                 <ul>
-                    <li><a href="#">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="#" class="current">Directory</a></li>
                     <li><a href="#">Join</a></li>
                     <li><a href="#">Discover</a></li>
