--- a/chamber/join.html
+++ b/chamber/join.html
@@ -32,9 +32,9 @@
         <button id="han-btn" class="hamburger"></button>
         <nav id="nav-bar" class="navigation">
             <ul>
-                <li><a href="#" class="current">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="directory.html">Directory</a></li>
-                <li><a href="#">Join</a></li>
+                <li><a href="#" class="current">Join</a></li>
                 <li><a href="#">Discover</a></li>
             </ul>
         </nav>
