--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -39,7 +39,7 @@
                 </ul>
             </nav>
         </header>
-        <main>
+        <main class="discover">
             <section>
                 <div id="allplaces"></div>
             </section>
