--- a/chamber/join.html
+++ b/chamber/join.html
@@ -16,6 +16,7 @@
           <link rel="stylesheet" href="styles/medium.css">
           <script src="scripts/navigation.js" defer></script>
           <script src="scripts/date.js" defer></script>
+          <script src="scripts/submition_date.js" defer></script>
 
           <link rel="icon" href="favicon.ico">
 
