--- a/proyect/contract_finis.html
+++ b/proyect/contract_finis.html
@@ -5,7 +5,7 @@
           <meta charset="UTF-8">
           <meta name="viewport" content="width=device-width, initial=scale=1.0">
           <title>Greenhouses Gidance Group</title>
-          <meta name="description" content="WDD 231 - Web Frontend Development 1 - Jose Luis Izelo Mabarak, this is the third activitie of WDD 231 and the home of the chamber, Puebla Trade Federation Home.">
+          <meta name="description" content="WDD 231 - Web Frontend Development 1 - Jose Luis Izelo Mabarak, this is the final project of WDD 231 and the Contract Finish of this project, Greenhouses Gidance Group.">
           <meta name="author" content="Jose Luis Izelo Mabarak">      
           <!--Tektur-->
           <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -20,7 +20,7 @@
           <link rel="icon" href="favicon.ico">
 
           <meta property="og:title" content="Greenhouses Gidance Group">
-          <meta property="og:description" content="WDD 231 - Web Frontend Development 1 - Jose Luis Izelo Mabarak, this is the third activitie of WDD 231 and the home of the chamber, Puebla Trade Federation Home."> 
+          <meta property="og:description" content="WDD 231 - Web Frontend Development 1 - Jose Luis Izelo Mabarak, this is the final project of WDD 231 and the Contract Finish of this project, Greenhouses Gidance Group."> 
           <meta property="og:image" content="https://izelomabarak.github.io/wdd231/images/logo.svg" />
           <meta property="og:url" content="https://izelomabarak.github.io/wdd231/">
   </head>
