--- a/proyect/index.html
+++ b/proyect/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial=scale=1.0">
         <title>Greenhouses Gidance Group</title>
-        <meta name="description" content="WDD 231 - Web Frontend Development 1 - Jose Luis Izelo Mabarak, this is the third activitie of WDD 231 and the home of the chamber, Puebla Trade Federation Home.">
+        <meta name="description" content="WDD 231 - Web Frontend Development 1 - Jose Luis Izelo Mabarak, this is the final project of WDD 231 and the home of this project, Greenhouses Gidance Group.">
         <meta name="author" content="Jose Luis Izelo Mabarak">      
         <!--Tektur-->
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -20,7 +20,7 @@
         <link rel="icon" href="images/favicon.ico">
 
         <meta property="og:title" content="Greenhouses Gidance Group">
-        <meta property="og:description" content="WDD 231 - Web Frontend Development 1 - Jose Luis Izelo Mabarak, this is the third activitie of WDD 231 and the home of the chamber, Puebla Trade Federation Home."> 
+        <meta property="og:description" content="WDD 231 - Web Frontend Development 1 - Jose Luis Izelo Mabarak, this is the final project of WDD 231 and the home of this project, Greenhouses Gidance Group."> 
         <meta property="og:image" content="https://izelomabarak.github.io/wdd231/images/logo.svg" />
         <meta property="og:url" content="https://izelomabarak.github.io/wdd231/">
     </head>
@@ -47,11 +47,11 @@
             <div class="firtsPart">
                 <section class="mission">
                     <h2>Mission</h2>
-                    <p>10/15/2025 Meeting With Investors: Meet our investors and see how he can help to grow your enterprise</p>
+                    <p>Our Mission is guive the beters oportunities to the farmers of the country, guiving them the tools for overcome his problems and improve in their jops, improving the production of food and also the profits of the farmers.</p>
                 </section>
                 <section class="vision">
                     <h2>Vision</h2>
-                    <p>10/15/2025 Meeting With Investors: Meet our investors and see how he can help to grow your enterprise</p>
+                    <p>Our company wants to become a help for the farmes of all the world and also for the food secure of the people, we want in a future to expand our orisonts to more distant countries and extend our service to the client.</p>
                 </section>
             </div>
 
@@ -62,11 +62,11 @@
             <div class="firtsPart">
                 <section class="values">
                     <h2>Values</h2>
-                    <p>10/15/2025 Meeting With Investors: Meet our investors and see how he can help to grow your enterprise</p>
+                    <p>Our values are the Honor, Responsability, Care Each Other, Serve the Needy, Advance, Progres, Respect and Diligence</p>
                 </section>
                 <section class="team">
                     <h2>Team</h2>
-                    <p>10/15/2025 Meeting With Investors: Meet our investors and see how he can help to grow your enterprise</p>
+                    <p>Our Team is a Joung theam that wanst guive to the farmers a tool for his jop, we guide ourselves by our values and by the vision of a beter future.</p>
                 </section>
             </div>
         </main>
