--- a/proyect/change_membership.html
+++ b/proyect/change_membership.html
@@ -59,9 +59,9 @@
             <p>wdd231 Class Project</p>
             <p>Jose Luis Izelo Mabarak</p>
             <p id="year"></p>
-            <p id="modified"></p>
         </div>
     </footer>
     <script src="scripts/change.js"></script>
+    <a href="join.html">Explanation of How Works the Page</a>
   </body>
 </html>
