--- a/proyect/directory.html
+++ b/proyect/directory.html
@@ -68,7 +68,7 @@
                 <p>wdd231 Class Project</p>
                 <p>Jose Luis Izelo Mabarak</p>
                 <p id="year"></p>
-                <p id="modified"></p>
+                <a href="join.html">Explanation of How Works the Page</a>
             </div>
         </footer>
     </body>
