--- a/proyect/join.html
+++ b/proyect/join.html
@@ -102,7 +102,7 @@
                 <p>wdd231 Class Project</p>
                 <p>Jose Luis Izelo Mabarak</p>
                 <p id="year"></p>
-                <p id="modified"></p>
+                <a href="join.html">Explanation of How Works the Page</a>
             </div>
         </footer>
         <script src="scripts/membership_carts.js" type="module"></script>
