--- a/proyect/join.html
+++ b/proyect/join.html
@@ -102,7 +102,7 @@
                 <p>wdd231 Class Project</p>
                 <p>Jose Luis Izelo Mabarak</p>
                 <p id="year"></p>
-                <a href="join.html">Explanation of How Works the Page</a>
+                <a href="https://www.loom.com/share/aeec4ca46b2b40c0a8254d8882c42dab?sid=e3906b8d-7b0b-4fad-8780-c4fa5d2b9bb9">Explanation of How Works the Page</a>
             </div>
         </footer>
         <script src="scripts/membership_carts.js" type="module"></script>
