--- a/proyect/change_membership.html
+++ b/proyect/change_membership.html
@@ -62,6 +62,6 @@
         </div>
     </footer>
     <script src="scripts/change.js"></script>
-    <a href="join.html">Explanation of How Works the Page</a>
+    <a href="https://www.loom.com/share/aeec4ca46b2b40c0a8254d8882c42dab?sid=e3906b8d-7b0b-4fad-8780-c4fa5d2b9bb9">Explanation of How Works the Page</a>
   </body>
 </html>
